Clean up books routes
Remove unnecessary routes, added tags
