# app/controllers/books_controller.rb
@@ -1,16 +1,17 @@
 class BooksController < ApplicationController
-  before_action :set_book, only: %i[ show update destroy ]
 
   # GET /books
   def index
     @books = Book.all
-
-    render json: @books
+    @books_api_models = @books.map { |book| BookApiModel.new(book) }
+    render json: @books_api_models
   end
 
   # GET /books/1
   def show
-    render json: @book
+    @book = Book.find(params[:id])
+    @books_api_model =  BookApiModel.new(@book) 
+    render json: @books_api_model
   end
 
   # GET /books/out-of-stock
@@ -20,48 +21,14 @@ class BooksController < ApplicationController
     render json: @outOfStockBooksApiModels
   end
 
-   # GET /books/search?term=example
+   # GET /books/search?searchTerm=example
   def search
-    term = params[:term].downcase
+    searchTerm = params[:searchTerm].downcase
     @books = Book.joins(:author)
-                 .where('lower(books.title) LIKE ? OR lower(authors.name) LIKE ?', "%#{term}%", "%#{term}%")
+                 .where('lower(books.title) LIKE ? OR lower(authors.name) LIKE ?', "%#{searchTerm}%", "%#{searchTerm}%")
     @books_api_models = @books.map { |book| BookApiModel.new(book) }
     render json: @books_api_models
   end
 
-  # POST /books
-  def create
-    @book = Book.new(book_params)
 
-    if @book.save
-      render json: @book, status: :created, location: @book
-    else
-      render json: @book.errors, status: :unprocessable_entity
-    end
-  end
-
-  # PATCH/PUT /books/1
-  def update
-    if @book.update(book_params)
-      render json: @book
-    else
-      render json: @book.errors, status: :unprocessable_entity
-    end
-  end
-
-  # DELETE /books/1
-  def destroy
-    @book.destroy!
-  end
-
-  private
-    # Use callbacks to share common setup or constraints between actions.
-    def set_book
-      @book = Book.find(params[:id])
-    end
-
-    # Only allow a list of trusted parameters through.
-    def book_params
-      params.require(:book).permit(:title, :hard_copies, :author_id)
-    end
 end
